@@ -1,5 +1,5 @@
 name: WedBars
-version: 0.0.79
+version: 0.0.90
 main: com.blockhead7360.mc.wedbars.WedBars
 authors: [Blockhead7360, TwelvePointFive]
 description: It's like Bed Wars on Hypixel but better I swear
